# terminal-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  RULES.md  package-lock.json  package.json  server-card.json  server.json  smithery.json
.claude/: settings.local.json
ptyd/: CMakeLists.txt  Makefile  build.sh  smoke-test.js
ptyd/src/: main.cpp  server.cpp  server.h  session.cpp  session.h
scripts/: build-pty-helper.sh  publish.js
src/: command-runner.js  index.js  pty-helper.c  pty-session.js  ptyd-client.js  session-id.js  session-manager.js  tools.js
test/: command-runner.test.js  e2e-pty-core.test.js  e2e-pty-interactive.test.js  pty-session.test.js  session-id.test.js  tools.test.js
